@startuml Package **cloudapps.mastermind.views.console**

package "cloudapps.mastermind.views.console" {

  class AttemptsView extends cloudapps.utils.WithConsoleView {
    -PlayController PlayController
    ~AttemptsView(PlayController)
    ~writeln(): void
  }

  class ColorView extends cloudapps.mastermind.views.ColorView {
    ~ColorView(Color)
    ~write(): void
  }

  abstract class Command extends cloudapps.utils.Command {
    #Console console
    #PlayController playController
    #Command(String, PlayController)
  }

  class ConsoleView extends cloudapps.mastermind.views.View implements cloudapps.mastermind.controllers.ControllerVisitor {
    -StartView startView
    -PlayView playView
    -ResumeView resumeView  
    +ConsoleView()
    +interact(AcceptorController): void
    +visit(StartController): void
    +visit(PlayController): void
    +visit(ResumeController): void
  }
  
  class ErrorView extends cloudapps.mastermind.views.ErrorView {
    ~ErrorView(Error)
    ~writeln(): void
  }
  
  class PlayCommand extends Command {
    ~PlayCommand(PlayController)
    #execute(): void
    #isActive(): boolean
  } 

  class PlayMenu extends cloudapps.utils.Menu {
    ~PlayMenu(PlayController)
  }

  class PlayView extends cloudapps.utils.WithConsoleView {
    ~interact(PlayController): void
  }

  class ProposedCombinationView extends cloudapps.utils.WithConsoleView {
    -PlayController playController
    ~ProposedCombinationView(PlayController)
    ~read(): List<Color>
    ~write(int): void
  }

  class RedoCommand extends Command {
    ~RedoCommand(PlayController)
    #execute(): void
    #isActive(): boolean
  }

  class ResultView extends cloudapps.utils.WithConsoleView {
    -PlayController playController
    ~ResultView(PlayController)
    ~writeln(int): void
  }

  class ResumeView {
    ~interact(ResumeController): void
  }

  class SecretCombinationView extends cloudapps.utils.WithConsoleView {
    -UseCaseController controller
    ~SecretCombinationView(UseCaseController)
    ~writeln(): void
  }

  class StartView extends cloudapps.utils.WithConsoleView {
    -SecretCombinationView secretCombinationView
    ~interact(StartController): void
  }

  class UndoCommand extends Command {
    ~UndoCommand(PlayController)
    #execute(): void
    #isActive(): boolean
  }
  
  AttemptsView *--> cloudapps.mastermind.controllers.PlayController
  AttemptsView *--> cloudapps.mastermind.views.MessageView

  ColorView ..> cloudapps.mastermind.types.Color
  ColorView ..> cloudapps.utils.Console

  Command *--> cloudapps.mastermind.controllers.PlayController
  Command *--> cloudapps.utils.Console

  ConsoleView *--> StartView
  ConsoleView *--> PlayView
  ConsoleView *--> ResumeView
  ConsoleView..> cloudapps.mastermind.controllers.AcceptorController
  ConsoleView..> cloudapps.mastermind.controllers.StartController
  ConsoleView..> cloudapps.mastermind.controllers.PlayController
  ConsoleView..> cloudapps.mastermind.controllers.ResumeController

  ErrorView ..> cloudapps.mastermind.types.Error
  ErrorView ..> cloudapps.utils.Console

  PlayCommand ..> cloudapps.mastermind.types.Color
  PlayCommand ..> cloudapps.mastermind.types.Error
  PlayCommand ..> cloudapps.mastermind.views.MessageView
  PlayCommand ..> cloudapps.mastermind.controllers.PlayController
  PlayCommand ..> java.util.List

  PlayMenu ..> cloudapps.mastermind.controllers.PlayController

  PlayView ..> cloudapps.mastermind.controllers.PlayController

  ProposedCombinationView *--> cloudapps.mastermind.controllers.PlayController
  ProposedCombinationView ..> cloudapps.mastermind.types.Color
  ProposedCombinationView ..> cloudapps.mastermind.views.MessageView
  ProposedCombinationView ..> java.util.ArrayList
  ProposedCombinationView ..> java.util.List

  RedoCommand ..> cloudapps.mastermind.controllers.PlayController
  RedoCommand ..> cloudapps.mastermind.views.MessageView

  ResultView *--> cloudapps.mastermind.controllers.PlayController
  ResultView ..> cloudapps.mastermind.views.MessageView

  ResumeView ..> cloudapps.mastermind.controllers.ResumeController
  ResumeView ..> cloudapps.mastermind.views.MessageView
  ResumeView ..> cloudapps.utils.YesNoDialog

  SecretCombinationView *--> cloudapps.mastermind.controllers.UseCaseController
  SecretCombinationView ..> cloudapps.mastermind.views.MessageView

  StartView *--> SecretCombinationView
  StartView ..> cloudapps.mastermind.controllers.StartController
  StartView ..> cloudapps.mastermind.views.MessageView

  UndoCommand *--> cloudapps.mastermind.controllers.PlayController
  UndoCommand ..> cloudapps.mastermind.views.MessageView

}

@enduml
